--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
+    "auth:sync": "amplify pull",
+    "amplify": "amplify"
   },
   "dependencies": {
-    "vue": "^2.6.11",
-    "vue-router": "^3.4.3"
+    "@aws-amplify/ui-vue": "^4.2.8",
+    "@vueuse/core": "^10.11.0",
+    "aws-amplify": "^6.3.6",
+    "daisyui": "^4.12.2",
+    "dayjs": "^1.11.11",
+    "mande": "^2.0.9",
+    "nuxt": "^3.11.2",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.6",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.1",
-    "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "@aws-amplify/cli": "^12.12.2",
+    "@formkit/nuxt": "^1.6.5",
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@vueuse/nuxt": "^10.10.0",
+    "nuxt-icon": "^0.6.10"
   }
 }
